# hvc-case-study

./: .project  Custom_new.assertions  Declarations.rct  Interrupt.rct  README.md  Transition_system.rct  properties.assertions  representations.aird  sequential_StateMachine.rct
assertions/probability_prism/: P1.assertions  P1A.assertions  P1_Spec1A.assertions  P1_Spec1B.assertions  P1_prob_internal_events.assertions  P1_prob_internal_events_Spec1A.assertions  P1_prob_internal_events_Spec1B.assertions  P2.assertions  P3.assertions  P4.assertions  P5.assertions
csp-gen/: Custom_new_assertions.csp  properties_assertions.csp
csp-gen/comp/: Custom_new_assertions.csp  Custom_new_assertions.json  file_Interrupt_comp.check.csp  file_sequential_StateMachine_comp.check.csp  instantiations.csp  properties_assertions.json
csp-gen/defs/: State_machine.csp  Watchdog.csp  checkLimits.csp  ctrl0.csp  ctrl0_coreassertions.csp  ctrl1.csp  ctrl2.csp  ctrl2_stm0.csp  ctrl3.csp  ctrl3_coreassertions.csp  ctrl3_stm0.csp  disableHV.csp  file_Declarations.csp  file_Interrupt.csp  mod_sys.csp  (+3 more)
hvc_external_hardware/: .project  Custom_new.assertions  Declarations.rct  Interrupt.rct  Transition_system.rct  properties.assertions  sequential_StateMachine.rct
prism-gen/: rc2prism.prefs
sbmf/: .project  Declarations.rct  Interrupt.rct  README.md  properties_paper.assertions  representations.aird  sequential_StateMachine.rct
sbmf/src-gen/: CMakeLists.txt  DataTypes.h  Functions.h  RP1.h  RobotImpl.h  State_machine.h  Watchdog.h  ctrl0.h  ctrl1.h  ctrl2.h  ctrl3.h  main.cpp  stm0.h
(+439 files in other folders)
